# microdb

./: .gitignore  Cargo.toml  README.md
examples/: main.rs
src/: db.rs  lib.rs  storage.rs
src/data/: mod.rs  num.rs  option.rs  result.rs  str.rs  traits.rs  tuples.rs  vec.rs
